# SteamScraper

./: .clang-format  CMakeLists.txt  README.md  VERSION  artwork.xml  config.ini.example  hints.txt  hints.xml  update_steamscraper.sh
docs/: ARTWORK.md  CACHE.md  CLIHELP.md  CONFIGINI.md  FAQ.md  FRONTENDS.md  IMPORT.md  LANGUAGES.md  PLATFORMS.md  REGIONS.md  SCRAPINGMODULES.md  USECASE.md
src/: abstractfrontend.cpp  abstractfrontend.h  abstractscraper.cpp  abstractscraper.h  attractmode.cpp  attractmode.h  cache.cpp  cache.h  compositor.cpp  compositor.h  crc32.cpp  crc32.h  emulationstation.cpp  emulationstation.h  esgamelist.cpp  esgamelist.h  fxbalance.cpp  fxbalance.h  fxblur.cpp  fxblur.h  fxbrightness.cpp  fxbrightness.h  fxcolorize.cpp  fxcolorize.h  fxcontrast.cpp  fxcontrast.h  fxframe.cpp  fxframe.h  fxgamebox.cpp  fxgamebox.h  fxhue.cpp  fxhue.h  fxmask.cpp  fxmask.h  fxopacity.cpp  fxopacity.h  fxrotate.cpp  fxrotate.h  fxrounded.cpp  fxrounded.h  (+46 more)
